<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">嘉德在线</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">你好中国</string>
    <string name="style_tv">首页</string>
    <string name="shopping_tv">个人中心</string>
    <string name="show_tv">设置</string>
    <string name="page_frame">嘉德在线</string>
    <string name="home">首页</string>
    <string name="categories">分类</string>
    <string name="currentend">当日结束</string>
    <string name="favorites">收藏夹</string>
    <string name="personalcenter">个人中心</string>
    <string name="home_title_querytext_hint">输入关键词查找拍品</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loagsucces">下载成功</string>
    <string name="app_falls">下载失败</string>
    <string name="waittingloading">正在下载请稍后……</string>
    <string name="filehaved">文件已存在</string>
    <string name="fileload">文件下载</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="title_activity_currentend">CurrentendActivity</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_personalcenter">PersonalcenterActivity</string>
    <string name="title_activity_categories_all_type">CategoriesAllTypeActivity</string>
    <string name="title_activity_categories_zt">CategoriesZtActivity</string>
    <string name="title_activity_categories_plist">CategoriesPListActivity</string>
    <string name="title_activity_categories_type_list">CategoriesTypeListActivity</string>
    <string name="title_activity_faq_msg">FaqMsgActivity</string>
    <string name="msg">"尊敬的嘉德在线会员：
您好，我公司将于2015年2月17日至24日放假八天，物流发货时间截止到2月13日（周五）。在春节放假期间，嘉德在线将暂停对外办公，网上拍卖仍照常进行。我们将于2015年2月25日开始办公。您的理解是对我们工作的最大支持。感谢您对嘉德在线的关注！嘉德在线公主您新春纳财福满堂，快乐吉祥体健康！
此致！敬礼！
北京嘉德在线拍卖有限公司
2015-2-11"</string>
    <string name="title_activity_message_list">MessageListActivity</string>
    <string name="title_activity_auction">AuctionActivity</string>
    <string name="zhuyishixiang">"\u0009\u0009您的出价行为表明已经认同了嘉德在线的拍卖规则。不论成功与否，你都承担与之相应的法律行为。
\u0009\u0009注意：根据《拍卖法》的规定：买受人应当按照约定支付拍卖标的价款，未按照约定支付价款的，应当承担违约责。通过竞买取得的拍品为特殊属性之商品，属于2014年3月15日起施行的《中华人民共和国消费者权益保护法》规定的其他根据商品性质并经消费者在购买时确认不宜退货的商品，不适用无理由退款。为了维护买卖双方的利益，规范网络拍卖市场的行为，如果因实物与描述明显不符，客户对拍品有退货的诉求，请在提货之日起7个工作日之内、物流发货请在签收之日起7个工作日内提出，逾期不予受理。不便之处，敬请谅解。"</string>
    <string name="title_activity_bond">BondActivity</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="title_activity_pay_success">PaySuccessActivity</string>
    <string name="title_activity_my_auction">MyAuctionActivity</string>
    <string name="title_activity_logistics">LogisticsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_query_reslut">QueryReslutActivity</string>
    <string name="title_activity_faq_to_pay">FAQ_toPayActivity</string>
    <string name="password_old">原密码</string>
    <string name="password_new">新密码</string>
    <string name="password_new_second">再次输入新密码</string>
    <string name="password_yzm">手机验证码</string>
    <string name="button_save">保存</string>
    <string name="aboutUs">关于我们</string>
    <string name="aboutBank" />
    <string name="but1">关于我们</string>
    <string name="but2">购物须知</string>
    <string name="but3">政策法规</string>
    <string name="but4">保密协议</string>
    <string name="but5">售后服务</string>
    <string name="but6">商务合作</string>
    <string name="copy">copyright@2014-2016 Styler</string>
    <string name="address">地址管理</string>
    <string name="address_add">新增</string>
    <string name="address_close">关闭</string>
    <string name="addressNewButton">新增地址</string>
    <string name="addressT">特别提示</string>
    <string name="addressTNew">可更改送货地址，但收件人及证件信息需保持一致，绑定账号，具有唯一性，且不可更改。</string>
    <string name="addressTOld">可更改送货地址，但收件人及证件信息需保持一致。</string>
    <string name="add_address">请输入详细地址...</string>
    <string name="add_zipcood">邮编</string>
    <string name="add_accname">收货人姓名</string>
    <string name="add_tel">收货人手机号</string>
    <string name="add_email">请输入邮箱</string>
    <string name="add_idcard">身份证号</string>
    <string name="add_qq">留下QQ便于联系</string>
    <string name="addressaddbutton">保存</string>
    <string name="order_manage_title">订单管理</string>
    <string name="order_detail_title">订单详情</string>
    <string name="order_track_title">订单跟踪</string>
    <string name="order_bank_title">取消订单</string>
    <string name="order_but_all">所有订单</string>
    <string name="order_but_noPay">未支付</string>
    <string name="order_but_pay">已支付</string>
    <string name="order_but_cancel">已取消</string>
    <string name="flow_ptr_pull_to_refresh">Pull to refresh</string>
    <string name="flow_ptr_release_to_refresh">Release to refresh</string>
    <string name="flow_ptr_refreshing">Refreshing</string>
    <string name="flow_ptr_last_updated">Updated: %1$s</string>
    <string name="flow_back">返回</string>
    <string name="flow_xlistview_header_hint_normal">下拉刷新</string>
    <string name="flow_xlistview_header_hint_ready">松开刷新数据</string>
    <string name="flow_xlistview_header_hint_loading">正在加载...</string>
    <string name="flow_xlistview_header_last_time">上次更新时间：</string>
    <string name="flow_xlistview_footer_hint_normal">查看更多</string>
    <string name="flow_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="guanyuwomen">北京嘉德在线（www.artrade.com）拍卖有限公司成立于2000年，其艺术品与电子商务结合的模式，成为中国互联网市场与艺术品市场的双重先驱。从在网上成交一个杯子都被视为天方夜谭，到如今每年上千万元的艺术品交易额，嘉德在线在形成自己品牌优势的同时，也参与和见证了国人消费习惯的革命。一年365天、一天24小时不间断的拍品交易，使她成为一家永不打烊的店铺、永不歇业的画廊、永不下班的拍卖行。</string>
    <string name="yhq_1">1.一次付款总金额1000元以上(含1000元)，可使用本代金券。</string>
    <string name="yhq_2">2.代金券可用来支付拍品费用、证件费用、佣金、运费、保险等一切与拍卖行为相关的费用支出。不能兑换现金或其它用途，不开具发票。</string>
    <string name="yhq_3">3.使用代金券支付的拍品，如产生退换货，代金券不予退回，其他费用按照相关规定返还。</string>
    <string name="yhq_4">4.代金券有效期截止到2015年9月30日，过期作废。</string>
    <string name="yhq_5">5.嘉德在线拥有本次代金券活动最终解释权。</string>
    <string name="zuzhistyle_lable">请选择客户组织类型</string>
</resources>
