<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/title" layout="@layout/back_title" />
    <View android:id="@id/passwordchange_line" android:background="@color/jiade_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/title" />
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/passwordchange_line">
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="188.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="8.0dip" android:text="@string/password_old" />
        <EditText android:id="@id/passwordold" android:background="#ffebebeb" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:ems="10" android:password="true" android:textCursorDrawable="@drawable/guangbiao" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="188.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="8.0dip" android:text="@string/password_new" />
        <EditText android:id="@id/password_new" android:background="#ffebebeb" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:ems="10" android:password="true" android:textCursorDrawable="@drawable/guangbiao" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="244.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="8.0dip" android:text="@string/password_new_second" />
        <EditText android:id="@id/password_new_second" android:background="#ffebebeb" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:ems="10" android:password="true" android:textCursorDrawable="@drawable/guangbiao" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="8.0dip" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="10.0dip">
            <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@id/button_save" android:background="@color/jiade_line_red" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/button_save" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>