<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/foot_height" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/bottom_home_layout_ly" android:background="@color/white" android:layout_width="@dimen/foot_bottom_layout_ly" android:layout_height="fill_parent" android:layout_marginTop="@dimen/foot_bottom_layout_top" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center" android:id="@id/bottom_home" android:background="@drawable/home_normal" android:layout_width="@dimen/foot_bottom_width" android:layout_height="@dimen/foot_bottom_height" />
        <TextView android:textSize="@dimen/foot_home_bottom_home_tv_textsize" android:textStyle="bold" android:textColor="#ff817f80" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/home_bottom_home_tv" android:paddingTop="@dimen/foot_home_bottom_home_tv_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/bottom_categories_layout_ly" android:background="@color/white" android:layout_width="@dimen/foot_bottom_layout_ly" android:layout_height="fill_parent" android:layout_marginTop="@dimen/foot_bottom_layout_top" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center" android:id="@id/bottom_categories" android:background="@drawable/categories_normal" android:layout_width="@dimen/foot_bottom_width" android:layout_height="@dimen/foot_bottom_height" />
        <TextView android:textSize="@dimen/foot_home_bottom_home_tv_textsize" android:textStyle="bold" android:textColor="#ff817f80" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/home_bottom_categories_tv" android:paddingTop="@dimen/foot_home_bottom_home_tv_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/categories" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/bottom_currentend_layout_ly" android:background="@drawable/home_bottom_style" android:layout_width="@dimen/foot_bottom_promotion_layout_ly_width" android:layout_height="fill_parent" android:layout_marginTop="@dimen/foot_bottom_promotion_layout_ly_top" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center" android:id="@id/bottom_currentend" android:background="@drawable/currentend_normal" android:layout_width="@dimen/foot_bottom_width" android:layout_height="@dimen/foot_bottom_height" />
        <TextView android:textSize="@dimen/foot_home_bottom_center_tv_textsize" android:textStyle="bold" android:textColor="#ff817f80" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/home_bottom_currentend_tv" android:paddingTop="@dimen/foot_home_bottom_center_tv_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/currentend" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/bottom_favorites_layout_ly" android:background="@drawable/home_bottom_style" android:layout_width="@dimen/foot_bottom_center_layout_ly_width" android:layout_height="fill_parent" android:layout_marginTop="@dimen/foot_bottom_center_layout_ly_top" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center" android:id="@id/bottom_favorites" android:background="@drawable/favorites_normal" android:layout_width="@dimen/foot_bottom_width" android:layout_height="@dimen/foot_bottom_height" />
        <TextView android:textSize="@dimen/foot_home_bottom_setting_tv_textsize" android:textStyle="bold" android:textColor="#ff817f80" android:layout_gravity="center" android:id="@id/home_bottom_favorites_tv" android:paddingTop="@dimen/foot_home_bottom_setting_tv_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/favorites" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/bottom_personalcenter_layout_ly" android:background="@drawable/home_bottom_style" android:layout_width="@dimen/foot_bottom_center_layout_ly_width" android:layout_height="fill_parent" android:layout_marginTop="@dimen/foot_bottom_center_layout_ly_top" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center" android:id="@id/bottom_personalcenter" android:background="@drawable/personalcenter_normal" android:layout_width="@dimen/foot_bottom_width" android:layout_height="@dimen/foot_bottom_height" />
        <TextView android:textSize="@dimen/foot_home_bottom_setting_tv_textsize" android:textStyle="bold" android:textColor="#ff817f80" android:layout_gravity="center" android:id="@id/home_bottom_personalcenter_tv" android:paddingTop="@dimen/foot_home_bottom_setting_tv_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/personalcenter" />
    </LinearLayout>
</LinearLayout>